--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -17434,26 +17434,6 @@ by you</property>
                 <child>
                   <widget class="GtkMenu" id="menu_view_menu">
                     <child>
-                      <widget class="GtkImageMenuItem" id="menuitem_chronopic">
-                        <property name="label">_Chronopic</property>
-                        <property name="visible">True</property>
-                        <property name="use_underline">True</property>
-                        <property name="use_stock">False</property>
-                        <signal name="activate" handler="on_menuitem_chronopic_activate"/>
-                        <child internal-child="image">
-                          <widget class="GtkImage" id="image18">
-                            <property name="visible">True</property>
-                            <property name="stock">gtk-missing-image</property>
-                          </widget>
-                        </child>
-                      </widget>
-                    </child>
-                    <child>
-                      <widget class="GtkSeparatorMenuItem" id="separatormenuitem2">
-                        <property name="visible">True</property>
-                      </widget>
-                    </child>
-                    <child>
                       <widget class="GtkImageMenuItem" id="menuitem_view_stats">
                         <property name="label" translatable="yes">S_tats</property>
                         <property name="visible">True</property>
@@ -17735,7 +17715,7 @@ by you</property>
                                         <property name="can_default">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="has_tooltip">True</property>
-                                        <property name="tooltip" translatable="yes">New person</property>
+                                        <property name="tooltip" translatable="yes">New persons (multiple)</property>
                                         <signal name="clicked" handler="on_person_add_multiple_clicked"/>
                                         <child>
                                           <widget class="GtkImage" id="image_persons_new_plus">
@@ -17779,7 +17759,7 @@ by you</property>
                                         <property name="can_default">True</property>
                                         <property name="receives_default">True</property>
                                         <property name="has_tooltip">True</property>
-                                        <property name="tooltip" translatable="yes">Load person</property>
+                                        <property name="tooltip" translatable="yes">Load persons from other session</property>
                                         <signal name="clicked" handler="on_recuperate_persons_from_session_clicked"/>
                                         <child>
                                           <widget class="GtkImage" id="image_persons_open_plus">
@@ -18290,6 +18270,7 @@ Chronopic</property>
                               <widget class="GtkNotebook" id="notebook_execute">
                                 <property name="visible">True</property>
                                 <property name="can_focus">True</property>
+                                <property name="show_tabs">False</property>
                                 <property name="show_border">False</property>
                                 <child>
                                   <widget class="GtkFrame" id="frame2">
@@ -19818,12 +19799,12 @@ Chronopic</property>
                               </packing>
                             </child>
                             <child>
-                              <widget class="GtkTable" id="table3">
+                              <widget class="GtkTable" id="table_execute_test">
                                 <property name="visible">True</property>
                                 <property name="n_rows">2</property>
                                 <property name="n_columns">3</property>
-                                <property name="column_spacing">6</property>
-                                <property name="row_spacing">6</property>
+                                <property name="column_spacing">8</property>
+                                <property name="row_spacing">8</property>
                                 <child>
                                   <widget class="GtkFrame" id="frame1">
                                     <property name="visible">True</property>
@@ -20379,31 +20360,105 @@ weight</property>
                                 <child>
                                   <widget class="GtkVBox" id="vbox11">
                                     <property name="visible">True</property>
+                                    <property name="spacing">12</property>
                                     <child>
-                                      <widget class="GtkHBox" id="hbox14">
+                                      <widget class="GtkFrame" id="frame5">
+                                        <property name="width_request">200</property>
                                         <property name="visible">True</property>
+                                        <property name="label_xalign">0</property>
+                                        <property name="label_yalign">0.69999998807907104</property>
+                                        <property name="shadow_type">out</property>
                                         <child>
-                                          <widget class="GtkLabel" id="label9">
+                                          <widget class="GtkAlignment" id="alignment1">
                                             <property name="visible">True</property>
-                                            <property name="label">chronopic info</property>
+                                            <property name="left_padding">6</property>
+                                            <child>
+                                              <widget class="GtkVBox" id="vbox15">
+                                                <property name="visible">True</property>
+                                                <property name="border_width">4</property>
+                                                <property name="spacing">10</property>
+                                                <child>
+                                                  <widget class="GtkVBox" id="vbox16">
+                                                    <property name="visible">True</property>
+                                                    <property name="spacing">6</property>
+                                                    <child>
+                                                      <widget class="GtkHBox" id="hbox21">
+                                                        <property name="visible">True</property>
+                                                        <property name="spacing">6</property>
+                                                        <child>
+                                                          <widget class="GtkLabel" id="label36">
+                                                            <property name="visible">True</property>
+                                                            <property name="label" translatable="yes">Connected Chronopics</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">0</property>
+                                                          </packing>
+                                                        </child>
+                                                        <child>
+                                                          <widget class="GtkLabel" id="label_connected_chronopics">
+                                                            <property name="visible">True</property>
+                                                          </widget>
+                                                          <packing>
+                                                            <property name="expand">False</property>
+                                                            <property name="position">1</property>
+                                                          </packing>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkTextView" id="textview_message_connected_chronopics">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <property name="editable">False</property>
+                                                        <property name="wrap_mode">word</property>
+                                                        <property name="cursor_visible">False</property>
+                                                        <property name="accepts_tab">False</property>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="position">1</property>
+                                                      </packing>
+                                                    </child>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="position">0</property>
+                                                  </packing>
+                                                </child>
+                                                <child>
+                                                  <widget class="GtkButton" id="button_activate_chronopics">
+                                                    <property name="label" translatable="yes">Configure Chronopic/s</property>
+                                                    <property name="visible">True</property>
+                                                    <property name="can_focus">True</property>
+                                                    <property name="receives_default">True</property>
+                                                    <signal name="clicked" handler="on_chronopic_clicked"/>
+                                                  </widget>
+                                                  <packing>
+                                                    <property name="expand">False</property>
+                                                    <property name="position">1</property>
+                                                  </packing>
+                                                </child>
+                                              </widget>
+                                            </child>
                                           </widget>
-                                          <packing>
-                                            <property name="position">0</property>
-                                          </packing>
                                         </child>
                                         <child>
-                                          <widget class="GtkLabel" id="label12">
+                                          <widget class="GtkLabel" id="label35">
                                             <property name="visible">True</property>
-                                            <property name="label">button
-chronopic
-window</property>
+                                            <property name="label" translatable="yes">&lt;b&gt;Chronopic connection&lt;/b&gt;</property>
+                                            <property name="use_markup">True</property>
                                           </widget>
                                           <packing>
-                                            <property name="position">1</property>
+                                            <property name="type">label_item</property>
                                           </packing>
                                         </child>
                                       </widget>
                                       <packing>
+                                        <property name="expand">False</property>
+                                        <property name="fill">False</property>
                                         <property name="position">0</property>
                                       </packing>
                                     </child>
@@ -20413,10 +20468,10 @@ window</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
+                                        <property name="border_width">8</property>
                                         <signal name="clicked" handler="on_button_execute_test_clicked"/>
                                       </widget>
                                       <packing>
-                                        <property name="expand">False</property>
                                         <property name="position">1</property>
                                       </packing>
                                     </child>
@@ -20424,6 +20479,7 @@ window</property>
                                   <packing>
                                     <property name="left_attach">1</property>
                                     <property name="right_attach">2</property>
+                                    <property name="x_options">GTK_FILL</property>
                                   </packing>
                                 </child>
                                 <child>
@@ -20458,6 +20514,7 @@ of execution</property>
                                     <property name="right_attach">2</property>
                                     <property name="top_attach">1</property>
                                     <property name="bottom_attach">2</property>
+                                    <property name="x_options">GTK_FILL</property>
                                     <property name="y_options"></property>
                                   </packing>
                                 </child>
