--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -15699,6 +15699,15 @@ by you</property>
                       </widget>
                     </child>
                     <child>
+                      <widget class="GtkMenuItem" id="menuitem_accelerators">
+                        <property name="visible">True</property>
+                        <property name="tooltip" translatable="yes">Use Chronojump faster</property>
+                        <property name="label" translatable="yes">_Accelerators</property>
+                        <property name="use_underline">True</property>
+                        <signal name="activate" handler="on_menuitem_accelerators_activate"/>
+                      </widget>
+                    </child>
+                    <child>
                       <widget class="GtkSeparatorMenuItem" id="separator2">
                         <property name="visible">True</property>
                       </widget>
@@ -15842,48 +15851,10 @@ by you</property>
                                       </packing>
                                     </child>
                                     <child>
-                                      <widget class="GtkButton" id="button_recuperate_persons_from_session1">
-                                        <property name="can_focus">True</property>
-                                        <property name="can_default">True</property>
-                                        <property name="receives_default">True</property>
-                                        <property name="has_tooltip">True</property>
-                                        <property name="tooltip" translatable="yes">Load persons from other session</property>
-                                        <signal name="clicked" handler="on_treeview_persons_up"/>
-                                        <accelerator key="Up" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
-                                        <child>
-                                          <widget class="GtkImage" id="image_persons_open_plus1">
-                                            <property name="visible">True</property>
-                                            <property name="stock">gtk-go-up</property>
-                                          </widget>
-                                        </child>
-                                      </widget>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="fill">False</property>
-                                        <property name="position">4</property>
-                                      </packing>
+                                      <placeholder/>
                                     </child>
                                     <child>
-                                      <widget class="GtkButton" id="button_recuperate_persons_from_session2">
-                                        <property name="can_focus">True</property>
-                                        <property name="can_default">True</property>
-                                        <property name="receives_default">True</property>
-                                        <property name="has_tooltip">True</property>
-                                        <property name="tooltip" translatable="yes">Load persons from other session</property>
-                                        <signal name="clicked" handler="on_treeview_persons_down"/>
-                                        <accelerator key="Down" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
-                                        <child>
-                                          <widget class="GtkImage" id="image_persons_open_plus2">
-                                            <property name="visible">True</property>
-                                            <property name="stock">gtk-go-down</property>
-                                          </widget>
-                                        </child>
-                                      </widget>
-                                      <packing>
-                                        <property name="expand">False</property>
-                                        <property name="fill">False</property>
-                                        <property name="position">5</property>
-                                      </packing>
+                                      <placeholder/>
                                     </child>
                                   </widget>
                                   <packing>
@@ -15919,11 +15890,83 @@ by you</property>
                                       <widget class="GtkVBox" id="vbox13">
                                         <property name="visible">True</property>
                                         <child>
-                                          <widget class="GtkLabel" id="label18">
+                                          <widget class="GtkHBox" id="hbox35">
                                             <property name="visible">True</property>
-                                            <property name="xalign">0</property>
-                                            <property name="label" translatable="yes">Current person</property>
-                                            <property name="use_markup">True</property>
+                                            <child>
+                                              <widget class="GtkLabel" id="label18">
+                                                <property name="visible">True</property>
+                                                <property name="xalign">0</property>
+                                                <property name="label" translatable="yes">Current person</property>
+                                                <property name="use_markup">True</property>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="position">0</property>
+                                              </packing>
+                                            </child>
+                                            <child>
+                                              <widget class="GtkAlignment" id="alignment9">
+                                                <property name="visible">True</property>
+                                                <child>
+                                                  <widget class="GtkHBox" id="hbox36">
+                                                    <property name="visible">True</property>
+                                                    <child>
+                                                      <widget class="GtkButton" id="button_persons_up">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <property name="can_default">True</property>
+                                                        <property name="receives_default">True</property>
+                                                        <property name="relief">half</property>
+                                                        <signal name="clicked" handler="on_treeview_persons_up"/>
+                                                        <accelerator key="Up" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                                                        <child>
+                                                          <widget class="GtkImage" id="image_persons_up">
+                                                            <property name="visible">True</property>
+                                                            <property name="stock">gtk-go-up</property>
+                                                            <property name="icon-size">2</property>
+                                                          </widget>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="fill">False</property>
+                                                        <property name="position">0</property>
+                                                      </packing>
+                                                    </child>
+                                                    <child>
+                                                      <widget class="GtkButton" id="button_persons_down">
+                                                        <property name="visible">True</property>
+                                                        <property name="can_focus">True</property>
+                                                        <property name="can_default">True</property>
+                                                        <property name="receives_default">True</property>
+                                                        <property name="relief">half</property>
+                                                        <signal name="clicked" handler="on_treeview_persons_down"/>
+                                                        <accelerator key="Down" signal="clicked" modifiers="GDK_CONTROL_MASK"/>
+                                                        <child>
+                                                          <widget class="GtkImage" id="image_persons_down">
+                                                            <property name="visible">True</property>
+                                                            <property name="stock">gtk-go-down</property>
+                                                            <property name="icon-size">2</property>
+                                                          </widget>
+                                                        </child>
+                                                      </widget>
+                                                      <packing>
+                                                        <property name="expand">False</property>
+                                                        <property name="fill">False</property>
+                                                        <property name="pack_type">end</property>
+                                                        <property name="position">1</property>
+                                                      </packing>
+                                                    </child>
+                                                  </widget>
+                                                </child>
+                                              </widget>
+                                              <packing>
+                                                <property name="expand">False</property>
+                                                <property name="fill">False</property>
+                                                <property name="pack_type">end</property>
+                                                <property name="position">1</property>
+                                              </packing>
+                                            </child>
                                           </widget>
                                           <packing>
                                             <property name="expand">False</property>
