--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -15629,7 +15629,7 @@ by you</property>
                       <widget class="GtkViewport" id="viewport_mode">
                         <property name="visible">True</property>
                         <property name="resize_mode">queue</property>
-                        <property name="hadjustment">0 0 730 73 657 730</property>
+                        <property name="hadjustment">0 0 769 76.900000000000006 692.10000000000002 769</property>
                         <property name="shadow_type">out</property>
                         <child>
                           <widget class="GtkHButtonBox" id="hbuttonbox2">
