--- a/glade/chronojump.glade
+++ b/glade/chronojump.glade
@@ -4182,7 +4182,7 @@ suitable for agility tests)</property>
                         <property name="n_rows">4</property>
                         <property name="n_columns">4</property>
                         <property name="column_spacing">4</property>
-                        <property name="row_spacing">8</property>
+                        <property name="row_spacing">12</property>
                         <child>
                           <widget class="GtkCheckButton" id="cb_jumps_simple">
                             <property name="label" translatable="yes">Simple</property>
@@ -4455,7 +4455,7 @@ suitable for agility tests)</property>
                     <property name="spacing">4</property>
                     <child>
                       <widget class="GtkScrolledWindow" id="scrolledwindow21">
-                        <property name="width_request">400</property>
+                        <property name="width_request">450</property>
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
                         <child>
@@ -14520,6 +14520,8 @@ Chronopic</property>
                       <widget class="GtkNotebook" id="notebook_main">
                         <property name="visible">True</property>
                         <property name="can_focus">True</property>
+                        <property name="tab_hborder">6</property>
+                        <property name="tab_vborder">4</property>
                         <child>
                           <widget class="GtkVBox" id="vbox9">
                             <property name="visible">True</property>
@@ -21299,11 +21301,10 @@ weight</property>
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkHBox" id="hbox253">
+                                  <widget class="GtkHButtonBox" id="hbuttonbox5">
                                     <property name="visible">True</property>
                                     <child>
                                       <widget class="GtkButton" id="button_stats">
-                                        <property name="width_request">200</property>
                                         <property name="visible">True</property>
                                         <property name="can_focus">True</property>
                                         <property name="receives_default">True</property>
@@ -21348,24 +21349,9 @@ weight</property>
                                         </child>
                                       </widget>
                                       <packing>
-                                        <property name="fill">False</property>
-                                        <property name="position">0</property>
-                                      </packing>
-                                    </child>
-                                    <child>
-                                      <widget class="GtkCheckButton" id="checkbutton_stats_always">
-                                        <property name="label" translatable="yes">always</property>
-                                        <property name="sensitive">False</property>
-                                        <property name="can_focus">True</property>
-                                        <property name="receives_default">False</property>
-                                        <property name="use_underline">True</property>
-                                        <property name="draw_indicator">True</property>
-                                        <signal name="clicked" handler="on_checkbutton_stats_always_clicked"/>
-                                      </widget>
-                                      <packing>
                                         <property name="expand">False</property>
                                         <property name="fill">False</property>
-                                        <property name="position">1</property>
+                                        <property name="position">0</property>
                                       </packing>
                                     </child>
                                   </widget>
@@ -21392,7 +21378,7 @@ weight</property>
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkHBox" id="hbox59">
+                                  <widget class="GtkHBox" id="hbox_mark_and_enunciate">
                                     <property name="visible">True</property>
                                     <property name="spacing">10</property>
                                     <child>
@@ -21452,7 +21438,7 @@ weight</property>
                                   </packing>
                                 </child>
                                 <child>
-                                  <widget class="GtkFrame" id="frame51">
+                                  <widget class="GtkFrame" id="frame_graph_and_report">
                                     <property name="visible">True</property>
                                     <property name="label_xalign">0</property>
                                     <property name="label_yalign">0.69999998807907104</property>
@@ -21474,7 +21460,7 @@ weight</property>
                                                     <property name="visible">True</property>
                                                     <property name="n_rows">2</property>
                                                     <property name="n_columns">4</property>
-                                                    <property name="column_spacing">8</property>
+                                                    <property name="column_spacing">12</property>
                                                     <child>
                                                       <widget class="GtkLabel" id="label764">
                                                         <property name="visible">True</property>
@@ -21607,7 +21593,7 @@ weight</property>
                                                     <property name="visible">True</property>
                                                     <property name="n_rows">2</property>
                                                     <property name="n_columns">5</property>
-                                                    <property name="column_spacing">8</property>
+                                                    <property name="column_spacing">12</property>
                                                     <child>
                                                       <widget class="GtkLabel" id="label766">
                                                         <property name="visible">True</property>
@@ -21771,14 +21757,15 @@ weight</property>
                                                 <child>
                                                   <widget class="GtkHBox" id="hbox_graph_margins">
                                                     <property name="visible">True</property>
-                                                    <property name="spacing">16</property>
+                                                    <property name="spacing">20</property>
                                                     <child>
                                                       <widget class="GtkHBox" id="hbox383">
                                                         <property name="visible">True</property>
-                                                        <property name="spacing">8</property>
+                                                        <property name="spacing">12</property>
                                                         <child>
                                                           <widget class="GtkHBox" id="hbox384">
                                                             <property name="visible">True</property>
+                                                            <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkLabel" id="label777">
                                                             <property name="visible">True</property>
@@ -21815,6 +21802,7 @@ weight</property>
                                                         <child>
                                                           <widget class="GtkHBox" id="hbox385">
                                                             <property name="visible">True</property>
+                                                            <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkLabel" id="label778">
                                                             <property name="visible">True</property>
@@ -21851,6 +21839,7 @@ weight</property>
                                                         <child>
                                                           <widget class="GtkHBox" id="hbox386">
                                                             <property name="visible">True</property>
+                                                            <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkLabel" id="label779">
                                                             <property name="visible">True</property>
@@ -21887,6 +21876,7 @@ weight</property>
                                                         <child>
                                                           <widget class="GtkHBox" id="hbox387">
                                                             <property name="visible">True</property>
+                                                            <property name="spacing">6</property>
                                                             <child>
                                                             <widget class="GtkLabel" id="label780">
                                                             <property name="visible">True</property>
